# imb

./: .clang-format  CMakeLists.txt  imb.dox  readme.md  todo.md  update.sh
.github/workflows/: main.yml
documentation/: appendix-00.md  appendix-01-conventions.md  appendix-10-tickets.md  appendix-99.md  directories.dox  documentation.dox  doxygen.cfg  doxygen.sh  todo.md  todos.md  update.sh
documentation/graphs/: dot.sh  imb-flowchart.dot  imb-logo.dot
documentation/pages/: example-c64-filter.md
include/imb/: arguments.h  common.h  display.h  file.h  filter_c64.h  imb.h  processor.h
scripts/: base.sh  build.sh  c64-vic-ii-a-palette.sh  cleanup.sh  coverage.sh  documentation.sh  dot.sh  profiling.sh  scripts.dox  tests.sh  update-source-code-format.sh
source/: arguments.cpp  common.cpp  display.cpp  file.cpp  filter_c64.cpp  imb.cpp  processor.cpp
tests/: base.sh  test-c64-palette-im.sh  test-operations-a.sh  test-operations-b.sh  test-operations.sh
